# databurg

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  databurgd.service
.github/: FUNDING.yml
.github/workflows/: release.yml
client/: Cargo.toml
client/bindings/typscript/: databurg.ts
client/src/: connect.rs  main.rs  recover.rs  status.rs  sync.rs
foundation/: Cargo.toml
foundation/src/: actor.rs  commands.rs  env.rs  fs.rs  lib.rs  protocol.rs
server/: Cargo.toml
server/src/: main.rs  serve.rs
