[package]
name = "client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/databurg/databurg"
license = "Apache-2.0"

[dependencies]
byteorder = "1.5.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
foundation = {path = "../foundation"}
log = "0.4.22"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ["full", "tracing"]}
tokio-rustls = "0.26.0"
rustls = { version = "0.23.17" }
clap = { version = "4.5.21", features = ["derive"] }
sha2 = "0.10.8"
flate2 = "1.0.35"
chrono = "0.4.38"
threadpool = "1.8.1"
walkdir = "2.5.0"

[[bin]]
name = "databurg"
path = "src/main.rs"
