[package]
name = "client"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/databurg/databurg"
license = "Apache-2.0"

[dependencies]
byteorder = "1.5.0"
env_logger = "0.11.5"
futures-util = "0.3.31"
foundation = {path = "../foundation"}
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full", "tracing"]}
tokio-rustls = "0.26.2"
rustls = { version = "0.23.25" }
clap = { version = "4.5.32", features = ["derive"] }
sha2 = "0.10.8"
flate2 = "1.1.0"
chrono = "0.4.40"
threadpool = "1.8.1"
walkdir = "2.5.0"

[[bin]]
name = "databurg"
path = "src/main.rs"
