[package]
name = "foundation"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/databurg/databurg"
license = "Apache-2.0"

[dependencies]
byteorder = "1.5.0"
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full", "tracing"]}
tokio-rustls = "0.26.2"
walkdir = "2.5.0"
sha2 = "0.10.8"
rustls = { version = "0.23.25" }
flate2 = "1.1.0"
