[package]
name = "server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/databurg/databurg"
license = "Apache-2.0"

[dependencies]
env_logger = "0.11.5"
foundation = {path = "../foundation"}
log = "0.4.22"
serde = {version = "1.0.214", features = ["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.41.1", features = ["full", "tracing"]}
tokio-rustls = "0.26.0"
clap = { version = "4.5.21", features = ["derive"] }
rustls = { version = "0.23.17" }
rustls-pemfile = "2.2.0"
flate2 = "1.0.35"
rcgen = "0.13.1"

[[bin]]
name = "databurgd"
path = "src/main.rs"
