[package]
name = "server"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/databurg/databurg"
license = "Apache-2.0"

[dependencies]
env_logger = "0.11.7"
foundation = {path = "../foundation"}
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.1", features = ["full", "tracing"]}
tokio-rustls = "0.26.2"
clap = { version = "4.5.32", features = ["derive"] }
rustls = { version = "0.23.25" }
rustls-pemfile = "2.2.0"
flate2 = "1.1.0"
rcgen = "0.13.2"

[[bin]]
name = "databurgd"
path = "src/main.rs"
